Locking Screen Orientation for Starting Page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
             android:name=".HelpAndTutorial"
             android:label="@string/title_activity_help_and_tutorial"
             android:theme="@style/Theme.TicTacToe.NoActionBar"></activity>
-        <activity android:name=".SinglePlayer" />
+        <activity android:name=".SinglePlayer"
+            android:screenOrientation="portrait"
+            />
         <activity android:name=".MainActivity" />
         <activity android:name=".StartingPage">
             <intent-filter>
